--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   // Use IntelliSense to learn about possible attributes.
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.0.2.2",
+  "version": "0.0.2.3",
   "configurations": [
     {
       "name": "Run server",
@@ -10,7 +10,7 @@
       "request": "launch",
       "mode": "auto",
       "program": "${workspaceFolder}/server/main.go",
-      "output": "${workspaceFolder}/server/cmd/mmo-server-v0.0.2.2.exe",
+      "output": "${workspaceFolder}/server/cmd/mmo-server.exe",
     }
   ]
 }
