--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=264
+dock_hsplit_2=278
 dock_hsplit_3=-348
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://states/connected/connected.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://states/connected/", "res://states/authentication/", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/", "res://maps/prototype/", "res://classes/", "res://autoloads/", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://classes/player_camera/player_camera.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/", "res://objects/character/", "res://maps/prototype/", "res://classes/", "res://classes/player_camera/", "res://autoloads/", "res://assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -29,15 +29,15 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn", "res://states/game/game.tscn", "res://components/hud/top_right_hud.tscn")
-current_scene="res://components/hud/top_right_hud.tscn"
+current_scene="res://maps/prototype/prototype.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://classes/pathfinding/a_star_node.gd", "res://classes/pathfinding/cell.gd", "res://states/game/game.gd", "res://autoloads/game_manager.gd", "res://autoloads/pathfinder.gd", "res://objects/character/player/player.gd", "res://classes/pathfinding/priority_queue.gd", "res://autoloads/region_manager.gd", "res://autoloads/signals.gd", "res://components/hud/top_right_hud.gd"]
-selected_script="res://autoloads/pathfinder.gd"
+open_scripts=["res://classes/player_camera/player_camera.gd", "res://main.gd", "res://objects/character/player/player.gd", "res://autoloads/signals.gd"]
+selected_script="res://classes/player_camera/player_camera.gd"
 open_help=[]
 script_split_offset=169
 list_split_offset=75
