--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -3,10 +3,10 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 12,
+"column": 45,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 8,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -67,7 +67,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 29,
-"scroll_position": 14.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,16 +91,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 49,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 24,
-"scroll_position": 1.0,
-"selection": true,
-"selection_from_column": 35,
-"selection_from_line": 24,
-"selection_to_column": 49,
-"selection_to_line": 24,
+"scroll_position": 11.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -173,7 +169,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 212,
-"scroll_position": 195.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -211,12 +207,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 97,
+"column": 75,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 277,
-"scroll_position": 263.0,
-"selection": false,
+"row": 140,
+"scroll_position": 129.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 139,
+"selection_to_column": 75,
+"selection_to_line": 140,
 "syntax_highlighter": "GDScript"
 }
 
@@ -303,21 +303,35 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 24,
-"scroll_position": 11.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://autoloads/pathfinder.gd]
+[res://classes/pathfinding/pathfinding.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 73,
+"column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 96,
+"row": 92,
 "scroll_position": 81.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://classes/player_camera/player_camera.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 8,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
