--- a/client/.godot/global_script_class_cache.cfg
+++ b/client/.godot/global_script_class_cache.cfg
@@ -23,6 +23,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://classes/message/message.gd"
 }, {
+"base": &"Camera3D",
+"class": &"PlayerCamera",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/player_camera/player_camera.gd"
+}, {
 "base": &"RefCounted",
 "class": &"PriorityQueue",
 "icon": "",
