--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=278
+dock_hsplit_2=277
 dock_hsplit_3=-348
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
@@ -36,7 +36,7 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://classes/player_camera/player_camera.gd", "res://main.gd", "res://objects/character/player/player.gd", "res://autoloads/signals.gd"]
+open_scripts=["res://main.gd", "res://objects/character/player/player.gd", "res://classes/player_camera/player_camera.gd", "res://autoloads/signals.gd"]
 selected_script="res://classes/player_camera/player_camera.gd"
 open_help=[]
 script_split_offset=169
