--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -29,15 +29,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn", "res://states/game/game.tscn", "res://components/hud/top_right_hud.tscn")
-current_scene="res://maps/prototype/prototype.tscn"
+current_scene="res://components/hud/top_right_hud.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://main.gd", "res://objects/character/player/player.gd", "res://classes/player_camera/player_camera.gd", "res://autoloads/signals.gd"]
-selected_script="res://classes/player_camera/player_camera.gd"
+open_scripts=["res://main.gd", "res://objects/character/player/player.gd", "res://classes/player_camera/player_camera.gd", "res://autoloads/signals.gd", "res://components/hud/top_right_hud.gd"]
+selected_script="res://components/hud/top_right_hud.gd"
 open_help=[]
 script_split_offset=169
 list_split_offset=75
