--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://classes/player_camera/player_camera.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/", "res://objects/character/", "res://maps/prototype/", "res://classes/", "res://classes/player_camera/", "res://autoloads/", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://autoloads/game_manager.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/", "res://objects/character/", "res://maps/prototype/", "res://classes/", "res://classes/player_camera/", "res://autoloads/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -32,13 +32,12 @@ open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://obje
 current_scene="res://components/hud/top_right_hud.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://main.gd", "res://objects/character/player/player.gd", "res://classes/player_camera/player_camera.gd", "res://autoloads/signals.gd", "res://components/hud/top_right_hud.gd"]
-selected_script="res://components/hud/top_right_hud.gd"
+open_scripts=["res://autoloads/game_manager.gd", "res://main.gd", "res://objects/character/player/player.gd", "res://classes/player_camera/player_camera.gd", "res://autoloads/signals.gd", "res://components/hud/top_right_hud.gd"]
+selected_script="res://objects/character/player/player.gd"
 open_help=[]
 script_split_offset=169
 list_split_offset=75
