--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -63,12 +63,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 29,
-"scroll_position": 0.0,
-"selection": false,
+"row": 20,
+"scroll_position": 15.0,
+"selection": true,
+"selection_from_column": 4,
+"selection_from_line": 20,
+"selection_to_column": 20,
+"selection_to_line": 20,
 "syntax_highlighter": "GDScript"
 }
 
@@ -91,12 +95,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 29,
-"scroll_position": 5.0,
-"selection": false,
+"row": 31,
+"scroll_position": 7.0,
+"selection": true,
+"selection_from_column": 7,
+"selection_from_line": 31,
+"selection_to_column": 32,
+"selection_to_line": 31,
 "syntax_highlighter": "GDScript"
 }
 
@@ -207,11 +215,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 138,
-"scroll_position": 132.0,
+"row": 405,
+"scroll_position": 389.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -235,11 +243,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 58,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 9.0,
+"row": 14,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -323,11 +331,15 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 54,
 "folded_lines": Array[int]([106, 110, 114, 118, 122]),
 "h_scroll_position": 0,
-"row": 44,
-"scroll_position": 27.0,
-"selection": false,
+"row": 31,
+"scroll_position": 15.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 31,
+"selection_to_column": 54,
+"selection_to_line": 31,
 "syntax_highlighter": "GDScript"
 }
