--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -10,16 +10,16 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=276
-dock_hsplit_3=-348
+dock_hsplit_3=-308
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://autoloads/region_manager.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://objects/character/", "res://maps/prototype/", "res://classes/player_camera/", "res://autoloads/")
-dock_node_current_tab=0
+dock_filesystem_selected_paths=PackedStringArray("res://classes/player_camera/player_camera.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/game/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://components/tooltip/", "res://classes/", "res://classes/player_camera/", "res://autoloads/")
+dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_3="Scene,Import"
@@ -28,17 +28,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn", "res://states/game/game.tscn", "res://components/hud/top_right_hud.tscn")
-current_scene="res://maps/prototype/prototype.tscn"
+open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn", "res://states/game/game.tscn", "res://components/hud/top_right_hud.tscn", "res://components/tooltip/tooltip.tscn")
+current_scene="res://objects/character/player/player.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://states/authentication/authentication.gd", "res://states/game/game.gd", "res://autoloads/game_manager.gd", "res://main.gd", "res://objects/character/player/player.gd", "res://classes/player_camera/player_camera.gd", "res://autoloads/region_manager.gd", "res://autoloads/signals.gd", "res://components/hud/top_right_hud.gd"]
-selected_script="res://autoloads/region_manager.gd"
+open_scripts=["res://autoloads/game_manager.gd", "res://objects/character/player/player.gd", "res://classes/player_camera/player_camera.gd", "res://components/tooltip/tooltip.gd", "res://autoloads/tooltip_manager.gd"]
+selected_script="res://components/tooltip/tooltip.gd"
 open_help=[]
 script_split_offset=169
 list_split_offset=75
