--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -95,7 +95,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 31,
-"scroll_position": 7.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 7,
 "selection_from_line": 31,
@@ -173,7 +173,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 68,
-"scroll_position": 52.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -211,11 +211,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 394,
-"scroll_position": 381.0,
+"row": 163,
+"scroll_position": 147.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -253,10 +253,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 10,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -323,15 +323,43 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 54,
+"column": 13,
 "folded_lines": Array[int]([106, 110, 114, 118, 122]),
 "h_scroll_position": 0,
-"row": 31,
-"scroll_position": 15.0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 1,
-"selection_from_line": 31,
-"selection_to_column": 54,
-"selection_to_line": 31,
+"selection_from_column": 12,
+"selection_from_line": 0,
+"selection_to_column": 13,
+"selection_to_line": 0,
+"syntax_highlighter": "GDScript"
+}
+
+[res://components/tooltip/tooltip.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 22,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://autoloads/tooltip_manager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 37,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 42,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
