--- a/client/.godot/editor/project_metadata.cfg
+++ b/client/.godot/editor/project_metadata.cfg
@@ -22,7 +22,7 @@ last_selected_language="GDScript"
 [debug_options]
 
 run_main_feature_tags=""
-multiple_instances_enabled=false
+multiple_instances_enabled=true
 run_instances_config=Array[Dictionary]([{
 "arguments": "",
 "features": "",
@@ -52,8 +52,8 @@ show_builtin_actions=false
 [color_picker]
 
 picker_shape=3
-recent_presets=PackedColorArray(0.196078, 0.196078, 0.196078, 1, 0.590441, 0.590441, 0.590441, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0.833333, 0, 1, 0.750993, 0.623664, 0, 1, 0.823529, 0.623529, 0, 1, 0.823529, 0.627451, 0, 1, 0.758288, 0.57677, 7.70092e-07, 1)
-color_mode=0
+recent_presets=PackedColorArray(0.590441, 0.590441, 0.590441, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0.833333, 0, 1, 0.750993, 0.623664, 0, 1, 0.823529, 0.623529, 0, 1, 0.823529, 0.627451, 0, 1, 0.758288, 0.57677, 7.70092e-07, 1, 1, 1, 1, 0.9)
+color_mode=2
 
 [linked_properties]
 
