--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 1282,
-"scroll_position": 1270.0,
+"row": 870,
+"scroll_position": 863.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -211,11 +211,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 50,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 95,
-"scroll_position": 87.0,
+"row": 7,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -323,16 +323,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 23,
 "folded_lines": Array[int]([106, 110, 114, 118, 122]),
 "h_scroll_position": 0,
 "row": 0,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 12,
-"selection_from_line": 0,
-"selection_to_column": 13,
-"selection_to_line": 0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -341,11 +337,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 59,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 4.0,
+"row": 12,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -355,15 +351,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 44,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 45,
-"scroll_position": 35.0,
-"selection": true,
-"selection_from_column": 37,
-"selection_from_line": 45,
-"selection_to_column": 44,
-"selection_to_line": 45,
+"row": 33,
+"scroll_position": 21.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
