--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://states/authentication/authentication.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://states/authentication/", "res://objects/character/player/", "res://maps/prototype/", "res://components/tooltip/")
+dock_filesystem_selected_paths=PackedStringArray("res://objects/characters/female_bot.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/game/", "res://states/authentication/", "res://objects/", "res://objects/characters/", "res://objects/character/", "res://maps/prototype/", "res://components/tooltip/", "res://assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -32,12 +32,12 @@ open_scenes=PackedStringArray("res://objects/character/player/player.tscn")
 current_scene="res://objects/character/player/player.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://states/authentication/authentication.gd"]
-selected_script="res://states/authentication/authentication.gd"
+open_scripts=["res://states/authentication/authentication.gd", "res://objects/character/player/player.gd"]
+selected_script="res://objects/character/player/player.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=75
