--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -28,11 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/interactables/crate.tscn")
-current_scene="res://objects/interactables/crate.tscn"
+open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn")
+current_scene="res://maps/prototype/prototype.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
