--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://autoloads/region_manager.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/connected/", "res://objects/", "res://objects/interactables/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/tooltip/", "res://classes/interactable/", "res://autoloads/", "res://assets/textures/prototype/orange/")
+dock_filesystem_selected_paths=PackedStringArray("res://objects/interactables/crate.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/connected/", "res://objects/", "res://objects/interactables/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/tooltip/", "res://classes/interactable/", "res://assets/textures/prototype/orange/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn")
-current_scene="res://maps/prototype/prototype.tscn"
+open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/interactables/crate.tscn")
+current_scene="res://objects/interactables/crate.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://objects/interactables/crate.gd", "res://objects/character/player/player.gd", "res://classes/interactable/interactable.gd", "res://autoloads/region_manager.gd"]
+open_scripts=["res://objects/interactables/crate.gd", "res://classes/interactable/interactable.gd", "res://autoloads/region_manager.gd", "res://objects/character/player/player.gd"]
 selected_script="res://objects/character/player/player.gd"
 open_help=[]
 script_split_offset=140
