--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://objects/interactables/crate.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://objects/character/player/player.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/connected/", "res://objects/", "res://objects/interactables/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/tooltip/", "res://classes/interactable/", "res://assets/textures/prototype/orange/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,15 +28,15 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn")
-current_scene="res://maps/prototype/prototype.tscn"
+open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn")
+current_scene="res://objects/character/player/player.tscn"
 center_split_offset=-217
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://objects/interactables/crate.gd", "res://classes/interactable/interactable.gd", "res://objects/character/player/player.gd", "res://autoloads/region_manager.gd", "res://autoloads/tooltip_manager.gd"]
+open_scripts=["res://objects/character/player/player.gd"]
 selected_script="res://objects/character/player/player.gd"
 open_help=[]
 script_split_offset=140
@@ -58,7 +58,7 @@ log_filter_1=true
 log_filter_3=false
 log_filter_4=true
 collapse=false
-show_search=false
+show_search=true
 
 [EditorWindow]
 
