--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -203,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 46,
-"folded_lines": Array[int]([201, 207, 233, 245, 265]),
+"column": 48,
+"folded_lines": Array[int]([194, 200, 237, 257]),
 "h_scroll_position": 0,
-"row": 805,
-"scroll_position": 756.0,
+"row": 925,
+"scroll_position": 888.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -253,7 +253,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 57,
-"scroll_position": 57.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
