--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -203,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
+"column": 82,
 "folded_lines": Array[int]([194, 200, 237, 257]),
 "h_scroll_position": 0,
-"row": 839,
-"scroll_position": 803.0,
+"row": 304,
+"scroll_position": 255.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -231,16 +231,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 56,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 19,
-"selection_from_line": 12,
-"selection_to_column": 21,
-"selection_to_line": 12,
+"row": 32,
+"scroll_position": 24.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
